[project]
name = "alfworld-grpo"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "verifiers @ https://github.com/willccbb/verifiers.git",
    "liger-kernel",
    "alfworld[full]",
    "transformers",
    "accelerate",
    "peft",
    "bitsandbytes",
    "vllm",
    "trl",
    "qwen_vl_utils",
]