[project]
name = "alfworld_grpo"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "verifiers@git+https://github.com/crislmfroes/verifiers#egg=feature/run-on-kaggle",
    "liger-kernel",
    "alfworld[full]",
    "transformers",
    "accelerate",
    "peft",
    "bitsandbytes",
    "vllm",
    "trl",
    "qwen_vl_utils",
    "unsloth",
    "unsloth-zoo",
]
[tool.setuptools]
py-modules = []